Fix wrapping behavior regarding logo section
I now made it so that the left hand side of the web page wraps to the
top when the window shrinks horizontally.

--- a/style.css
+++ b/style.css
@@ -5,34 +5,34 @@
 
 html, body{
     display: flex;
-    flex-direction: row;
-    /*flex-wrap: nowrap;*/
-    height: 100%;
-    max-width: 100%;
-    overflow-x: hidden;
-    margin: 0;
     flex-wrap: wrap;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
     font-family: "SpaceMono";
 }
 
 /*Beginning of first half of page*/
 #logo-section{ 
-    flex: 1 1 1;
     display: flex;
+    flex: 1 1 33vw;
+    min-width: 320px;
+
     flex-direction: column;
     align-items: center;
-    background: url(images/fire-edit.jpeg);
+    background-image: url(images/fire-edit.jpeg);
     background-size: cover;
-    background-position: center;
-    width: 33vw;
+    background-position: center center;
 }
 
 .logo-area{
     display: flex;
     justify-content: center;
     align-items: center;
+    
     position: relative;
     top: 154px;
+    
     height: 100px;
     width: 100%;
     background-color: rgb(218,51,48, 0.3);
@@ -52,12 +52,6 @@ html, body{
     float: left;
 }
 
-#sign-up-sheet-section{
-    flex: 1 1 1;
-    width: 67vw;
-    min-width: 587px;
-}
-
 footer{
     position: absolute;
     top: 97%;
@@ -72,49 +66,53 @@ a{
 #sign-up-sheet-section{ 
     display: flex;
     flex-direction: column;
+    flex: 1 1 67vw;
+    min-height: 70vh;
+
     align-items: center;
 }
 
+.wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100%;   
+}
+
 .section-1{
+    flex: 0.6 1 0;
+    
     display: flex;
     justify-content: center;
-    height: 35vh;
-    width: 100%;
-    /*background-color: rgb(247, 247, 247);*/
+    align-items: center;
     background-color: white;
     color: black;
     background: linear-gradient(rgba(218, 51, 48, 0.3) 0 0) bottom/ 500px 2px no-repeat, white;
 }
 
 .section-2{
+    flex: 1 1 0;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
-    height: 30vh; 
-    width: 100%;
     background-color: white;
     color: black;
     background: linear-gradient(rgba(218, 51, 48, 0.3) 0 0) bottom/ 500px 2px no-repeat, white;
 }
 
 .section-3{
+    flex: 1 1 0;
+
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 35vh;
-    width: 100%;
-    /*background-color: rgb(247, 247, 247);*/
     background-color: white;
     color: black;
 }
 
 p{
-    /*text-align: center;*/
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 120px;
     max-width: 1000px;
     font-size: 1.2rem;
     font-weight: bold;
@@ -124,8 +122,6 @@ p{
 
 dd{
     margin-left: 0;
-    /*padding-top: 20px;
-    padding-left: 40px;*/
     padding-bottom: 15px;
     font-size: 1.2rem;
 }
@@ -133,19 +129,12 @@ dd{
 form{
     display: flex;
     flex-direction: column;
-    /*padding-left: 40px;
-    padding-top: 20px;*/
     gap: 5px;
-}
-
-.first-name, .email, .password{
-    /*float: left;*/
 }
 
 label{
     font-size: .8rem;
     color:rgb(39, 38, 38);
-    /*display: block;*/
 }
 
 input{
@@ -168,12 +157,10 @@ button{
     width: 200px;
     height: 50px;
     background-color: #ff4e41;
-    /*background-color: rgb(218,51,48, 1);*/
     border: none;
     color: white;
     font-size: 1.2rem;
     border-radius: 5px;
-    /*margin-left: 40px;*/
 }
 
 button:hover{
@@ -184,18 +171,12 @@ button:active{
     background-color: #ff4e41;
 }
 
-button + div{
-    /*margin-top: 20px;
-    margin-left: 40px;*/
-}
-
-button + div + div{
-    position: relative;
-    top: 90px;
+.website-credits{
+    color: black;
     text-align: center;
 }
 
-button + div + div a{
+.website-credits a{
     color: black;
 }
 
